# ndk-screen_live

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/screen/live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_wind_ndk_screen_live_Rtmp.cpp  com_wind_ndk_screen_live_Rtmp.h  native-lib.cpp  packet.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/wind/ndk/screen/live/: MainActivity.java  RTMPPackage.java  Rtmp.java  ScreenLive.java  VideoCodec.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wind/ndk/screen/live/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
